.k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sw-simple-deployment
  labels:
    app: sw-simple
spec:
  replicas: 10
  selector:
    matchLabels:
      app: sw-simple
  template:
    metadata:
      labels:
        app: sw-simple
    spec:
      containers:
      - name: sw-simple
        image: evilpandas/sw-simple
        ports:
        - containerPort: 8080
