.k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: sw-simple
  name: sw-service
  labels:
    app: sw-simple
spec:
  selector:
    app: sw-simple
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: ClusterIP
